# json_uploader

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakeUserPresets.json  NOTICE  README.md  conanfile.txt  create_appimage_modern.sh
.github/workflows/: quality_security.yml
configure/: rz_config.hpp.in
data/: example.json  example_schema.json  json_uploader.env_example
data/reports/: 2026-04-18_Linux_CycloneDx.json  2026-04-18_Linux_depdiscover.html  2026-04-18_Linux_depdiscover.json  2026-04-18_Linux_depdiscover.md  2026-04-18_Linux_gh-libs.csv  2026-04-18_Linux_gh-libs.json
docs/architecture/: overview.md
docs/example/: README.md  hr_schema_v1.json  hr_test-data.json  hr_test.env  upload_20260418_130914_494.json
include/: auth_client.hpp  auth_srv.hpp  cli_parser.hpp  cli_parser_ctrl.hpp  config.hpp  config_type.hpp  email_client.hpp  email_srv.hpp  env_util.hpp  error.hpp  error_type.hpp  logger_util.hpp  rz_config.hpp  uploader.hpp  uploader_srv.hpp  validator.hpp  validator_util.hpp
resources/: json_uploader.desktop
src/: auth_client.cpp  auth_srv.cpp  cli_parser.cpp  cli_parser_ctrl.cpp  email_client.cpp  email_srv.cpp  env_util.cpp  logger_util.cpp  main.cpp  uploader.cpp  uploader_srv.cpp  validator.cpp  validator_util.cpp
tests/: CMakeLists.txt  README.md
tests/src/: main.cpp
